--- a/package.json
+++ b/package.json
@@ -2,15 +2,15 @@
   "name": "class-book",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.ts",
-    "build": "webpack",
-    "type": "module"
+    "start": "npx tsx server.ts",
+    "build": "webpack"
   },
   "keywords": [],
   "author": "",
+  "type": "module",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -22,15 +22,18 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.3",
     "nodemailer": "^6.9.14",
+    "tsx": "^4.16.2",
     "webpack": "^5.92.1"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
+    "@types/cookie-parser": "^1.4.7",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.14.8",
     "@types/nodemailer": "^6.4.15",
+    "ts-loader": "^9.5.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.5.2",
     "webpack-cli": "^5.1.4"
