--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
     "compilerOptions": {
-      "module": "CommonJS",
-      "target": "ES2016",
+      "module": "ESNext",
+      "target": "ESNext",
       "moduleResolution": "node",
       "rootDir": "./",
       "outDir": "./build",
