--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npx tsx server.ts",
-    "build": "webpack"
+    "start": "node dist/server.js",
+    "dev": "ts-node-dev server.ts",
+    "build": "tsc"
   },
   "keywords": [],
   "author": "",
@@ -34,7 +35,7 @@
     "@types/node": "^20.14.8",
     "@types/nodemailer": "^6.4.15",
     "ts-loader": "^9.5.1",
-    "ts-node-dev": "^2.0.0",
+    "ts-node-dev": "^1.1.8",
     "typescript": "^5.5.2",
     "webpack-cli": "^5.1.4"
   }
