--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.3",
+    "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "nodemailer": "^6.9.14",
     "tsx": "^4.16.2",
     "webpack": "^5.92.1"
@@ -33,6 +35,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
+    "@types/multer": "^1.4.11",
     "@types/node": "^20.14.8",
     "@types/nodemailer": "^6.4.15",
     "ts-loader": "^9.5.1",
