--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@types/jsonwebtoken": "^9.0.6",
     "@types/multer": "^1.4.11",
     "@types/node": "^20.14.8",
+    "@types/node-cron": "^3.0.11",
     "@types/nodemailer": "^6.4.15",
     "ts-loader": "^9.5.1",
     "ts-node-dev": "^1.1.8",
