--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node dist/server.js",
     "dev": "ts-node-dev server.ts",
-    "build": "tsc"
+    "build": "tsc --outDir dist"
   },
   "keywords": [],
   "author": "",
