--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,13 @@
 {
   "version": 2,
-  "builds": [{ "src": "dist/server.js", "use": "@vercel/node" }],
+  "builds": [
+    {
+      "src": "server.ts",
+      "use": "@vercel/node",
+      "config": {
+        "includeFiles": ["**/*.ts"]
+      }
+    }
+  ],
   "routes": [{ "src": "/(.*)", "dest": "dist/server.js" }]
 }
