--- a/vercel.json
+++ b/vercel.json
@@ -3,11 +3,8 @@
   "builds": [
     {
       "src": "server.ts",
-      "use": "@vercel/node",
-      "config": {
-        "includeFiles": ["**/*.ts"]
-      }
+      "use": "@vercel/node"
     }
   ],
-  "routes": [{ "src": "/(.*)", "dest": "dist/server.js" }]
+  "routes": [{ "src": "/(.*)", "dest": "server.ts" }]
 }
